docs: publish accurate 1.0.36 release documentation
Co-authored-by: Cursor <cursoragent@cursor.com>