@@ -1,261 +1,80 @@
-<p align="center">
-  <img src="docs/assets/banner.png" alt="SiliconFlow Banner" width="100%" style="border-radius: 16px; box-shadow: 0 12px 40px rgba(0, 242, 254, 0.25);" />
-</p>
+# SiliconFlow
 
-<p align="center">
-  <img src="docs/assets/logo.png" alt="SiliconFlow Logo" width="160" style="border-radius: 24px; box-shadow: 0 8px 32px rgba(0, 242, 254, 0.4);" />
-</p>
+Frame-time telemetry and optional client-side render optimizations for Apple Silicon Macs running Fabric Minecraft.
 
-<h1 align="center">⚡ SiliconFlow: Apple Silicon Quantum Engine ⚡</h1>
+> This repository currently builds one version-specific artifact: **Minecraft 1.21.4**.
+> It does not provide a universal JAR for all Minecraft versions, and it does not guarantee an FPS or stutter outcome.
 
-<p align="center">
-  <b>Hardcore Low-Level Performance & Zero-Microstutter Engine for Apple Silicon (M1 / M2 / M3 / M4) on Minecraft 1.21.4 (Fabric)</b>
-</p>
+## What it does
 
-<p align="center">
-  <a href="https://fabricmc.net/"><img src="https://img.shields.io/badge/Minecraft-1.0_➔_26.x+_(All_Versions)-blue?style=for-the-badge&logo=minecraft&logoColor=white" alt="Minecraft 1.0 - 26.x+ (All Versions)"></a>
-  <a href="https://fabricmc.net/"><img src="https://img.shields.io/badge/Fabric-Universal_All--Versions-dbb48c?style=for-the-badge&logo=fabric&logoColor=white" alt="Fabric Loader"></a>
-  <a href="https://apple.com/"><img src="https://img.shields.io/badge/Apple_Silicon-M1_|_M2_|_M3_|_M4-000000?style=for-the-badge&logo=apple&logoColor=white" alt="Apple Silicon M-Series"></a>
-  <a href="https://github.com/chackrahunter/siliconflow/releases"><img src="https://img.shields.io/badge/Release-v1.0.35_All--Versions-00f2fe?style=for-the-badge&logo=github&logoColor=black" alt="Release v1.0.35"></a>
-  <a href="https://ko-fi.com/chackrahunter"><img src="https://img.shields.io/badge/Support_on-Ko--fi-FF5E5B?style=for-the-badge&logo=kofi&logoColor=white" alt="Ko-fi"></a>
-  <a href="https://www.paypal.me/Donsko2007"><img src="https://img.shields.io/badge/Donate-PayPal-00457C?style=for-the-badge&logo=paypal&logoColor=white" alt="PayPal"></a>
-  <a href="https://github.com/chackrahunter/siliconflow"><img src="https://img.shields.io/badge/Diagnostics-236_Error_Codes-a855f7?style=for-the-badge&logo=matrix&logoColor=white" alt="236 Diagnostic Codes"></a>
-  <a href="https://github.com/chackrahunter/siliconflow"><img src="https://img.shields.io/badge/Status-Zero--Stutter_Certified-10b981?style=for-the-badge&logo=checkmarx&logoColor=white" alt="Zero-Stutter Certified"></a>
-</p>
+SiliconFlow focuses on client frame-time visibility and conservative, configurable optimizations around systems that are outside the main responsibilities of common performance mods. The implementation includes:
 
-<p align="center">
-  <img src="docs/assets/typing_header.svg" alt="Animated Live Darwin Kernel Telemetry" width="100%" />
-</p>
+- an in-game F8 telemetry overlay;
+- optional JSON recording to `m3-live-telemetry.json` when recording is enabled;
+- frame-time, spike, GC, memory-pressure, and selected runtime telemetry;
+- best-effort Darwin QoS requests, without claiming CPU-core affinity or real-time priority;
+- optional soft render/entity/particle/UI reductions controlled by the active performance profile;
+- compatibility checks for optional Sodium, Lithium, FerriteCore, ImmediatelyFast, and Iris integrations.
 
-<p align="center">
-  <img src="docs/assets/divider.svg" alt="Animated Divider" width="100%" />
-</p>
+The mod does not expose GPU utilization or VRAM usage through its own telemetry. macOS remains responsible for scheduling threads and placing them on performance or efficiency cores.
 
----
+## Compatibility
 
-## 🌟 Overview & Real-Time Dials
+The current artifact is compiled and tested for the following target:
 
-**SiliconFlow** is a native performance engine specifically engineered for **macOS Darwin on ARM64 Apple Silicon (M1, M2, M3, M4)**. 
+- Minecraft `1.21.4`
+- Yarn mappings `1.21.4+build.8`
+- Fabric API `0.119.4+1.21.4`
+- Fabric Loader `0.16.14`
+- Java `21+`, preferably a native Apple/aarch64 runtime on Apple Silicon
 
-Standard Minecraft performance mods are designed around generic x86 Windows/Linux architectures and fail to leverage Apple Silicon's unique **Unified Memory Architecture (UMA)**, **TBDR (Tile-Based Deferred Rendering) Metal GPU**, and asymmetric **P-Core / E-Core core topologies**. 
+A version detector cannot make classes, mappings, or Mixin descriptors portable between Minecraft releases. Supporting another release requires a separate build and version-specific launch/smoke testing. See [`docs/compatibility.md`](docs/compatibility.md) and [`docs/versions/README.md`](docs/versions/README.md).
 
-SiliconFlow interacts directly with the **macOS Mach Microkernel** and **Metal Direct Pipelines** to deliver butter-smooth, ultra-high framerates (up to **540–1100+ FPS**) with true **sub-millisecond frametimes** and zero micro-stuttering.
+## F8 overlay and recording
 
-<p align="center">
-  <img src="docs/assets/fps_gauge_animated.svg" alt="Animated Telemetry Dials" width="100%" />
-</p>
+Press **F8** in-game to toggle the telemetry overlay. It reports values the client can actually observe, such as frame-time samples, FPS derived from those samples, memory/GC probes, runtime flags, and active profile state. Values that the implementation cannot measure—such as GPU utilization, VRAM, exact CPU-core placement, and network ping in a local-only context—are shown as unavailable or omitted.
 
-<p align="center">
-  <img src="docs/assets/live_wave.svg" alt="Animated Real-Time Wave Oscillator" width="100%" />
-</p>
+A real Minecraft screenshot of the overlay is preserved below. The image is illustrative of the UI, not a benchmark result.
 
----
+<img src="docs/assets/hud_preview.png" alt="Minecraft gameplay with the SiliconFlow F8 telemetry overlay" width="95%">
 
-## 🚀 Real In-Game Benchmarks & Live Telemetry (Apple M3 8GB)
+The optional recorder writes periodic JSON snapshots to the configured telemetry path. Treat the file as diagnostic output, not as a standardized benchmark format; retain the raw file and configuration when sharing measurements.
 
-<p align="center">
-  <img src="docs/assets/benchmark_bars_animated.svg" alt="Animated Benchmark Comparison" width="100%" />
-</p>
+## Benchmark and reproducible testing
 
-| Metric | Vanilla / Generic Modpacks | With SiliconFlow (Quantum Silicon) | Improvement |
-| :--- | :---: | :---: | :---: |
-| **Live In-Game FPS** | `110 - 140 FPS` | **`541.0 FPS`** *(Peaks up to 1,108 FPS)* | **+400% 🚀** |
-| **Average Frametime** | `17.4 ms` (60 Hz VSync Locked) | **`1.8 ms`** *(Min: 1.1 ms / Max: 6.8 ms)* | **9.6x Faster ⚡** |
-| **1% Low Microstutters** | `140 ms - 237 ms` (GC Stalls) | **`< 12 ms` (Imperceptible)** | **-95% Lag Spikes 🛡️** |
-| **Render Thread Core** | Randomly demoted to 2.7 GHz E-Cores | **100% Pinned to 4.05 GHz P-Cores** | **100% Turbo Residency 🔥** |
-| **Shader Shadow Draw Calls**| `3,800+ Draw Calls / frame` | **`< 1,400 Draw Calls / frame`** | **-63% GPU Load ❄️** |
+The Prism instance used for compatibility testing includes the optional stack visible in its launch log: Sodium `0.6.13`, Iris `1.8.8`, C2ME `0.3.2`, Lithium `0.15.3`, FerriteCore `7.1.3`, ImmediatelyFast `1.8.7`, ModernFix `5.20.3`, MoreCulling `1.2.10`, Sodium Extra `0.6.1`, Cloth Config, Fabric API, and their declared dependencies. This establishes that the artifact was exercised in that mod environment; it does **not** establish a performance improvement for every mod or shader combination.
 
-<p align="center">
-  <img src="docs/assets/divider.svg" alt="Animated Divider" width="100%" />
-</p>
+No universal FPS, frametime, GPU, VRAM, P-core, or stutter-improvement figure is claimed here. Any number copied from a local HUD or telemetry file must be labeled **measured** with its hardware, Minecraft build, mod versions, settings, scene, capture window, and raw source file. Values used only to explain the procedure must be labeled **illustrative**.
 
----
+For a reproducible comparison:
 
-## 🔬 Apple Silicon Hardware & Kernel Architecture
+1. Record the exact Mac model, RAM, macOS version, Java vendor/architecture, Minecraft/Fabric versions, mod versions, shader state, display refresh rate, render/simulation distance, and JVM arguments.
+2. Create two profiles that differ only by SiliconFlow being present or absent. Keep the same world, seed, camera route, resource pack, render settings, and background applications.
+3. Warm up each profile for five minutes, then repeat the same route for at least five runs. Capture raw F8/recorder output for every run; do not use a single peak FPS reading as a result.
+4. Report median and p95/p99 frame time, sample count, run duration, and notable spikes. Report FPS only as a secondary summary.
+5. Publish the raw telemetry and configuration alongside any aggregate. If a result was not captured under this protocol, mark it **illustrative** or **unverified**, not measured.
 
-<p align="center">
-  <img src="docs/assets/architecture.png" alt="Apple Silicon Architecture Diagram" width="95%" style="border-radius: 12px; box-shadow: 0 8px 30px rgba(0,0,0,0.5);" />
-</p>
+The companion-mod stack is supported as a compatibility test environment, not a promise that every combination has identical behavior. Iris/shader behavior remains dependent on the exact driver, pack, and version; SiliconFlow does not guarantee shader compatibility or shader performance.
 
-<p align="center">
-  <img src="docs/assets/pcore_matrix_animated.svg" alt="Animated CPU Allocation Matrix" width="100%" />
-</p>
+## Configuration and useful guides
 
-### 1. 🧬 Native Mach Kernel Thread Affinity (`THREAD_AFFINITY_POLICY`)
-- macOS Darwin kernel demotes render threads to slow Efficiency Cores when background chunk builders saturate all cores (`SYS-001`).
-- SiliconFlow uses Mach syscalls (`thread_policy_set`) with **`THREAD_AFFINITY_POLICY (Tag 1)`** and **`THREAD_EXTENDED_POLICY (timeshare = 0)`** to lock the Minecraft Render Thread into real-time priority on the **4.05 GHz Performance Cores**.
-- Chunk meshing builder threads are balanced to **3 threads max**, reserving 1 P-Core 100% exclusively for the Render Thread.
+- [`docs/compatibility.md`](docs/compatibility.md) — exact-target policy and Prism deployment.
+- [`docs/versions/README.md`](docs/versions/README.md) — version matrix and artifact selection.
+- [`docs/max-fps-checklist.md`](docs/max-fps-checklist.md) — concise English checklist.
+- [`docs/prism-max-performance.md`](docs/prism-max-performance.md) — conservative 8 GB Apple Silicon setup guidance.
+- [`docs/stutter-research.md`](docs/stutter-research.md) — research notes and reproducible troubleshooting.
+- [`docs/sodium-lithium-gap-analysis.md`](docs/sodium-lithium-gap-analysis.md) — boundaries with common performance mods.
 
-### 2. ⚡ Sodium SWAP Direct-Memory Off-Heap Meshing
-- Replaces standard Java heap chunk buffer churn with direct macOS memory-mapped **`SWAP` allocator buffers** and **`Compact Vertex Format`**.
-- Eliminates over **1.5 GB of Java Heap garbage**, allowing ZGC to run instant micro-sweeps (< 1 ms) without Stop-The-World stalls.
+Delete an obsolete `config/m3-frametime.json` only when upgrading if the release notes or implementation require a reset; preserve and inspect configuration when troubleshooting. The recorder and F8 overlay are useful diagnostics and are intentionally retained.
 
-### 3. 🎯 Iris Shaders Sub-Pixel Culling & TBDR Tile Spill Prevention
-- Under extreme shader packs, items, arrows, XP orbs, item frames, and ambient creatures far away (>12m) are automatically culled during shadow pass cascades.
-- Reduces GPU fragment shader overdraw by over **50%**, keeping the M3 GPU ice cold and preventing thermal throttling (`GPU-040`).
-
-### 4. 🛰️ Autonomous Live Flight Recorder & Real-Time Auto-Tuner
-- Automatically streams high-frequency JSON telemetry (`m3-live-telemetry.json`) at 2 Hz.
-- Dynamically self-adjusts entity gates, shadow ranges, and particle queues in real time whenever load surges.
-- Hot-reloads `config/m3-frametime.json` in under 1 second without restarting Minecraft!
-
-<p align="center">
-  <img src="docs/assets/divider.svg" alt="Animated Divider" width="100%" />
-</p>
-
----
-
-## 📊 F8 In-Game Diagnostic Matrix & 236-Code Scanner
-
-<p align="center">
-  <img src="docs/assets/hud_preview.png" alt="Real In-Game F8 Diagnostic HUD" width="95%" style="border-radius: 12px; box-shadow: 0 8px 30px rgba(0,0,0,0.5);" />
-</p>
-
-<p align="center">
-  <img src="docs/assets/stutter_matrix_animated.svg" alt="Animated 236 Diagnostic Error Code Radar Scanner" width="100%" />
-</p>
-
-Press **`F8`** in-game to toggle the real-time telemetry overlay:
-
-```text
-========================================================================
-⚡ [SILICONFLOW: P-CORE] | [v1.0.19 · MC Universal] | [15:23:05]
-FPS: 541.0 [HIGH/STABLE] | FT: 1.8 ms [MIN: 1.1 / MAX: 6.8]
-TPS: 20.0 (SYNCED) | PING: 14 ms
-CPU/GPU: P-CORE AFFINITY: LOCKED | GPU UTIL: 34% | CPU LOAD: 41%
-Memory: RAM USE: 1.0 GB / 3.6 GB | VRAM: 1.2 GB
-------------------------------------------------------------------------
-Status Matrix: [STATUS: OK-000] OPTIMAL PERFORMANCE · P-CORE MACH AFFINITY LOCKED
-========================================================================
-```
-
-### Taxonomy of the 236 Diagnostic Error Codes:
-- **`GC-001..030`**: Garbage Collector & Allocation Velocity Analysis (ZGC, G1GC, Safepoints).
-- **`MEM-001..025`**: Unified Memory & Page Compressor Status (SSD Swapping, Direct Buffers).
-- **`GPU-001..040`**: Metal TBDR Tile Buffer Spills, VRAM Bandwidth & Thermal Throttling.
-- **`CHK-001..030`**: Sodium Meshing Queues, Chunk Section Buffers & Worker Starvation.
-- **`ENT-001..030`**: Entity Frustum Early-Out & Limb Animation Bottlenecks.
-- **`BLK-001..025`**: Block Entity Matrix & Distance Culling.
-- **`PRT-001..020`**: Particle Storm Hard Budgets & Queue Trimming.
-- **`SND-001..015`**: OpenAL Audio Channel Exhaustion & Sync Stalls.
-- **`SYS-001..020`**: Mach Kernel Scheduling, Display Server IPC & QoS Demotion.
-- **`OK-000`**: Complete System Health & Sub-Millisecond Frame Delivery.
-
-<p align="center">
-  <img src="docs/assets/divider.svg" alt="Animated Divider" width="100%" />
-</p>
-
----
-
-## 🧩 The Ultimate Companion Mod Stack (Must-Have Mods)
-
-To achieve maximum 200+ FPS stability with extreme shaders on Apple Silicon, install these companion mods alongside **SiliconFlow** in your Fabric `mods/` folder:
-
-| Mod | Version | Purpose for Apple Silicon |
-| :--- | :--- | :--- |
-| **[Sodium](https://modrinth.com/mod/sodium)** | `0.6.13+` | Next-gen SIMD chunk meshing & rendering pipeline. |
-| **[Iris Shaders](https://modrinth.com/mod/iris)** | `1.8.8+` | Modern shader pipeline integrated directly with Metal TBDR. |
-| **[Lithium](https://modrinth.com/mod/lithium)** | `0.14.0+` | Physics, entity AI, and world tick optimizations on E-Cores. |
-| **[FerriteCore](https://modrinth.com/mod/ferrite-core)** | `7.0.0+` | Compresses blockstates and models, saving ~1 GB of RAM. |
-| **[ImmediatelyFast](https://modrinth.com/mod/immediatelyfast)** | `1.3.0+` | Batches HUD, text, and GUI draw calls directly on GPU. |
-| **[ModernFix](https://modrinth.com/mod/modernfix)** | `5.19.0+` | Eliminates memory leaks and speeds up world loading. |
-| **[C2ME](https://modrinth.com/mod/c2me-fabric)** | `0.3.0+` | Multi-threaded chunk generation utilizing all 8 CPU cores. |
-| **[EntityCulling](https://modrinth.com/mod/entityculling)** | `1.7.0+` | Skips entity rendering behind walls via fast async raytracing. |
-
----
-
-## ⚙️ Optimal In-Game & Launcher Settings Guide
-
-### 1. Prism Launcher / Modrinth Settings (RAM & Java)
-> [!IMPORTANT]
-> On an **8 GB Apple Silicon Mac**, setting the RAM too high (e.g. 4+ GB) forces macOS to compress memory and use the SSD swapfile, causing 100ms micro-stutters!
-- **Memory Allocation**:
-  - **Minimum Memory**: `1536 MB` (`-Xms1536m`)
-  - **Maximum Memory**: `2560 MB` (`-Xmx2560m`) *(Sweet Spot for 8GB Macs!)*
-- **Java Runtime**: **Java 21 (ARM64 / aarch64 native)** (e.g. Azul Zulu or Eclipse Temurin ARM64).
-- **JVM Arguments**:
-```bash
--XX:+UseZGC -XX:+ZGenerational -XX:+AlwaysPreTouch -XX:+UseNUMA -XX:+UnlockExperimentalVMOptions
-```
-
----
-
-### 2. Video Settings (Sodium & Graphics)
-Navigate to **Options ➔ Video Settings**:
-- **Display**:
-  - **Max Framerate**: `Unlimited` *(Unlocks full M3 GPU throughput)*
-  - **VSync**: `OFF` *(SiliconFlow ensures tear-free high refresh pacing)*
-  - **GUI Scale**: `3` or `Auto`
-- **Performance (Sodium Options)**:
-  - **Chunk Memory Allocator**: **`SWAP`** *(Bypasses Java heap, uploads VBOs directly to Metal GPU)*
-  - **Chunk Builder Threads**: **`3`** *(Auto-configured by SiliconFlow to guarantee 1 P-Core for Render Thread)*
-  - **Use Compact Vertex Format**: **`ON`** *(Halves geometry data bandwidth)*
-  - **Use Block Face Culling**: **`ON`**
-  - **Use Fog Occlusion**: **`ON`**
-- **Quality**:
-  - **Graphics**: `Fast` or `Fancy`
-  - **Clouds**: `Fast` or `Off`
-  - **Particles**: `Decreased` or `Minimal`
-  - **Biome Blend**: `0` (Off) or `2x2`
-
----
-
-### 3. Iris Shader Settings (For Extreme Shaders)
-When using shaders like **Complementary Reimagined**, **BSL**, or **Photon**:
-- **Render Resolution Scaling**: Set to **`0.75x` or `1.0x`**
-  - *Why?* Retina displays render at massive resolutions ($3024 \times 1964$). Running shaders at 0.75x looks razor-sharp but cuts GPU power from 25W to 9W, completely eliminating GPU thermal throttling!
-- **Shadow Map Resolution**: `1024` or `2048`
-- **Shadow Distance**: `8 - 12 Chunks` *(SiliconFlow's Sub-Pixel Culling handles the rest)*
-
----
-
-## 🏗️ Building from Source
+## Build and Prism deployment
 
 ```bash
-# Clone the repository
-git clone https://github.com/chackrahunter/siliconflow.git
-cd siliconflow
-
-# Build and create production JAR
-./gradlew build
-
-# The compiled artifact is located at:
-# build/libs/siliconflow-1.0.35+all-versions.jar
+./gradlew build --console=plain -Pprism_instance=1.21.11
 ```
 
-<p align="center">
-  <img src="docs/assets/divider.svg" alt="Animated Divider" width="100%" />
-</p>
+The build compiles the exact `1.21.4` target and deploys the remapped JAR to the named Prism instance. A successful copy into a differently-versioned instance is not compatibility evidence. The artifact is written to `build/libs/` with the project version from `gradle.properties`.
 
----
+## License
 
-## ☕ Support & Donations (Unterstützung & Spenden)
-
-Wenn dir **SiliconFlow** gefällt, deine Frametimes auf Apple Silicon geglättet hat oder dir 500+ FPS in Minecraft ermöglicht hat, freue ich mich riesig über deine Unterstützung! 
-
-Jede einzelne Spende, jeder Kaffee und jeder Support hilft mir enorm dabei, das Projekt kontinuierlich weiterzuentwickeln, neue Optimierungen zu erforschen und für künftige Minecraft-Versionen bereitzustellen. Vielen herzlichen Dank! ❤️
-
-<p align="center">
-  <a href="https://ko-fi.com/chackrahunter" target="_blank">
-    <img src="https://img.shields.io/badge/Support_on-Ko--fi-FF5E5B?style=for-the-badge&logo=kofi&logoColor=white" alt="Support on Ko-fi" height="40" />
-  </a>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <a href="https://www.paypal.me/Donsko2007" target="_blank">
-    <img src="https://img.shields.io/badge/Donate_with-PayPal-00457C?style=for-the-badge&logo=paypal&logoColor=white" alt="Donate with PayPal" height="40" />
-  </a>
-</p>
-
-- ☕ **Ko-fi**: [https://ko-fi.com/chackrahunter](https://ko-fi.com/chackrahunter)
-- 💳 **PayPal**: [https://www.paypal.me/Donsko2007](https://www.paypal.me/Donsko2007)
-
-*Vielen Dank für jeden Support und jede Wertschätzung!* 🙏
-
----
-
-## 📄 License
-
-This project is licensed under the **MIT License** — see the [LICENSE](LICENSE) file for details.
-
-<p align="center">
-  <b>Engineered with ❤️ for Apple Silicon & Minecraft Enthusiasts</b>
-</p>
+MIT — see [`LICENSE`](LICENSE).
